--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
   "description": "Mega Library",
   "keywords": [],
   "author": "Maldan",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7"
+  }
 }
